# low-latency-exchange

./: CMakeLists.txt  README.md  wire_to_wire_data.csv
benchmarks/: CMakeLists.txt
benchmarks/concurrency/: SPSCQueueBench.cpp
benchmarks/core/: BitboardBench.cpp  FreeListBench.cpp
benchmarks/system/: InternalPipelineBench.cpp  InternalPipelineStressBench.cpp  LatencyRecorder.hpp
scripts/: bridge.py  chaos_bot.py  client.py  md_client.py  plot_latency.py  run_exchange.sh
src/: CMakeLists.txt  main.cpp
src/concurrency/: SPSCQueue.hpp  VyukovMPSC.hpp
src/core/: Bitboard.hpp  FreeList.hpp  Freelist.hpp  Matcher.hpp  Order.hpp  OrderBook.hpp  Types.hpp
src/distribution/: MarketDataPublisher.hpp
src/gateway/: ClientSession.hpp  NetworkProtocol.hpp  TcpGateway.hpp
src/memory/: HFTAllocator.hpp  ThreadLocalPool.hpp
web/: app.js  index.html  style.css
